Source/hedgehog/fds_fortran_interface.h

// Input file setup
void fds_set_input_file(const char *fname, int flen);
// Initialization and finalization
void fds_initialize_all(double *t, double *dt, int *nmeshes);
void fds_finalize_all(double t, double dt);
// State setters
void fds_set_predictor(int flag);
void fds_set_icyc(int val);
double fds_get_t_end();
int fds_get_nmeshes();
int fds_get_lower_mesh_index();
int fds_get_upper_mesh_index();
int fds_is_cc_ibm();
void fds_zero_q_m_dot();
double fds_adjust_dt(double t, double dt);
// Predictor phase per-mesh subroutines
void fds_insert_particles(double t, int nm);
void fds_compute_viscosity(int nm, int estimated);
void fds_mass_finite_differences(int nm);
void fds_density(double t, double dt, int nm);
void fds_cc_density(double t, double dt);
void fds_viscosity_bc(int nm, int estimated);
void fds_velocity_flux(double t, double dt, int nm, int estimated);
void fds_wall_bc(double t, double dt, int nm);
void fds_particle_momentum(double dt, int nm);
void fds_divergence_part_1(double t, double dt, int nm);
void fds_divergence_part_2(double dt, int nm);
void fds_init_change_time_step(double dt);
void fds_set_first_pass(int flag);
void fds_check_change_time_step(int *need_retry, double *dt_out);
void fds_cc_restore_uvw_unlinked(int nm);
void fds_velocity_predictor(double t_plus_dt, double dt, int nm);
void fds_stop_check_zero();
void fds_velocity_corrector(double t, double dt, int nm);
void fds_match_velocity(int nm);
void fds_velocity_bc(double t, int nm, int estimated);
void fds_match_velocity_kernel(int nm, int is_predictor);
void fds_velocity_bc_preprocessing(int nm, double t, int apply_to_estimated);
void fds_velocity_bc_process_edges_kernel(int nm, double t, int apply_to_estimated);
void fds_synthetic_turbulence_if_enabled(double dt, double t, int nm);
// Corrector phase per-mesh subroutines
void fds_combustion_bc(int nm);
void fds_combustion(double t, double dt);
void fds_condensation(double dt, int nm);
void fds_particle_mass_energy(double t, double dt, int nm);