Source/hedgehog/fds_c_interface.f90

!> \brief ISO_C_BINDING wrappers for FDS subroutines
!> These wrappers allow C++ code (Hedgehog tasks) to call Fortran physics routines.

MODULE FDS_C_INTERFACE

USE ISO_C_BINDING
USE FDS_DRIVER
USE PRECISION_PARAMETERS
USE GLOBAL_CONSTANTS
USE MESH_VARIABLES
USE DIVG
USE PRES
USE MASS
USE PART
USE VEGE
USE VELO
USE RAD
USE WALL_ROUTINES
USE FIRE
USE TURBULENCE, ONLY: SYNTHETIC_TURBULENCE
USE CC_VELOCITY, ONLY: CC_END_STEP,CC_RESTORE_UVW_UNLINKED, &
   CC_VELOCITY_BC, CC_PROJECT_VELOCITY
USE CC_DENSITY_MOD, ONLY: CC_DENSITY
USE SOOT_ROUTINES, ONLY: CALC_AGGLOMERATION
USE HVAC_ROUTINES
USE DUMP
USE COMP_FUNCTIONS, ONLY: CURRENT_TIME
USE CONTROL_FUNCTIONS

IMPLICIT NONE (TYPE,EXTERNAL)

CONTAINS

!==============================================================================
! Initialization and finalization
!==============================================================================

SUBROUTINE C_FDS_SET_INPUT_FILE(FNAME, FLEN) BIND(C, NAME="fds_set_input_file")
    INTEGER(C_INT), VALUE :: FLEN
    CHARACTER(KIND=C_CHAR), DIMENSION(FLEN), INTENT(IN) :: FNAME
    INTEGER :: J
    FN_INPUT = ' '
    DO J=1,MIN(FLEN,LEN(FN_INPUT))
       FN_INPUT(J:J) = FNAME(J)
    ENDDO
END SUBROUTINE C_FDS_SET_INPUT_FILE

SUBROUTINE C_FDS_INIT(T_OUT, DT_OUT, NMESHES_OUT) BIND(C, NAME="fds_initialize_all")
    REAL(C_DOUBLE), INTENT(OUT) :: T_OUT, DT_OUT
    INTEGER(C_INT), INTENT(OUT) :: NMESHES_OUT
    REAL(EB) :: T_LOCAL, DT_LOCAL
    T_LOCAL = 0._EB
    DT_LOCAL = 0._EB
    CALL FDS_INIT(T_LOCAL, DT_LOCAL)
    T_OUT = T_LOCAL
    DT_OUT = DT_LOCAL
    NMESHES_OUT = NMESHES
END SUBROUTINE C_FDS_INIT

SUBROUTINE C_FDS_FINALIZE(T, DT) BIND(C, NAME="fds_finalize_all")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL FDS_FINALIZE(T, DT)
END SUBROUTINE C_FDS_FINALIZE

!==============================================================================
! State setters
!==============================================================================

SUBROUTINE C_FDS_SET_PREDICTOR(FLAG) BIND(C, NAME="fds_set_predictor")
    INTEGER(C_INT), VALUE :: FLAG
    PREDICTOR = (FLAG /= 0)
    CORRECTOR = (FLAG == 0)
END SUBROUTINE C_FDS_SET_PREDICTOR

SUBROUTINE C_FDS_SET_ICYC(VAL) BIND(C, NAME="fds_set_icyc")
    INTEGER(C_INT), VALUE :: VAL
    ICYC = VAL
END SUBROUTINE C_FDS_SET_ICYC

FUNCTION C_FDS_GET_T_END() RESULT(T_END_OUT) BIND(C, NAME="fds_get_t_end")
    REAL(C_DOUBLE) :: T_END_OUT
    T_END_OUT = T_END
END FUNCTION C_FDS_GET_T_END

FUNCTION C_FDS_GET_NMESHES() RESULT(NMESHES_OUT) BIND(C, NAME="fds_get_nmeshes")
    INTEGER(C_INT) :: NMESHES_OUT
    NMESHES_OUT = NMESHES
END FUNCTION C_FDS_GET_NMESHES

FUNCTION C_FDS_GET_LOWER_MESH_INDEX() RESULT(LOWER_OUT) BIND(C, NAME="fds_get_lower_mesh_index")
    INTEGER(C_INT) :: LOWER_OUT
    LOWER_OUT = LOWER_MESH_INDEX
END FUNCTION C_FDS_GET_LOWER_MESH_INDEX

FUNCTION C_FDS_GET_UPPER_MESH_INDEX() RESULT(UPPER_OUT) BIND(C, NAME="fds_get_upper_mesh_index")
    INTEGER(C_INT) :: UPPER_OUT
    UPPER_OUT = UPPER_MESH_INDEX
END FUNCTION C_FDS_GET_UPPER_MESH_INDEX

FUNCTION C_FDS_IS_CC_IBM() RESULT(FLAG) BIND(C, NAME="fds_is_cc_ibm")
    INTEGER(C_INT) :: FLAG
    IF (CC_IBM) THEN
        FLAG = 1
    ELSE
        FLAG = 0
    ENDIF
END FUNCTION C_FDS_IS_CC_IBM

SUBROUTINE C_FDS_ZERO_Q_M_DOT() BIND(C, NAME="fds_zero_q_m_dot")
    Q_DOT = 0._EB
    M_DOT = 0._EB
END SUBROUTINE C_FDS_ZERO_Q_M_DOT

FUNCTION C_FDS_ADJUST_DT(T_IN, DT_IN) RESULT(DT_OUT) BIND(C, NAME="fds_adjust_dt")
    REAL(C_DOUBLE), VALUE :: T_IN, DT_IN
    REAL(C_DOUBLE) :: DT_OUT
    DT_OUT = DT_IN
    ! Replicate the DT adjustment logic from the top of MAIN_LOOP
    IF (ALL(CHANGE_TIME_STEP_INDEX==1)) DT_OUT = MINVAL(DT_NEW)
    IF (ANY(CHANGE_TIME_STEP_INDEX==-1)) DT_OUT = MINVAL(DT_NEW)
    ! Clip final time step
    IF ((T_IN+DT_OUT+DT_END_FILL)>T_END) DT_OUT = MAX(T_END-T_IN+TWENTY_EPSILON_EB,DT_END_MINIMUM)
END FUNCTION C_FDS_ADJUST_DT

!==============================================================================
! Predictor phase subroutines
!==============================================================================

SUBROUTINE C_FDS_INSERT_PARTICLES(T, NM) BIND(C, NAME="fds_insert_particles")
    REAL(C_DOUBLE), VALUE :: T
    INTEGER(C_INT), VALUE :: NM
    CALL INSERT_ALL_PARTICLES(T, NM)
END SUBROUTINE C_FDS_INSERT_PARTICLES

SUBROUTINE C_FDS_COMPUTE_VISCOSITY(NM, ESTIMATED) BIND(C, NAME="fds_compute_viscosity")
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    CALL COMPUTE_VISCOSITY(NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_COMPUTE_VISCOSITY

SUBROUTINE C_FDS_MASS_FINITE_DIFF(NM) BIND(C, NAME="fds_mass_finite_differences")
    INTEGER(C_INT), VALUE :: NM
    CALL MASS_FINITE_DIFFERENCES_NEW(NM)
END SUBROUTINE C_FDS_MASS_FINITE_DIFF

SUBROUTINE C_FDS_DENSITY(T, DT, NM) BIND(C, NAME="fds_density")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL DENSITY(T, DT, NM)
END SUBROUTINE C_FDS_DENSITY

SUBROUTINE C_FDS_CC_DENSITY(T, DT) BIND(C, NAME="fds_cc_density")
    REAL(C_DOUBLE), VALUE :: T, DT
    IF (CC_IBM) CALL CC_DENSITY(T, DT)
END SUBROUTINE C_FDS_CC_DENSITY

SUBROUTINE C_FDS_VISCOSITY_BC(NM, ESTIMATED) BIND(C, NAME="fds_viscosity_bc")
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    CALL VISCOSITY_BC(NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_VISCOSITY_BC

SUBROUTINE C_FDS_VELOCITY_FLUX(T, DT, NM, ESTIMATED) BIND(C, NAME="fds_velocity_flux")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    IF (.NOT.CYLINDRICAL) CALL VELOCITY_FLUX(T, DT, NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
    IF (     CYLINDRICAL) CALL VELOCITY_FLUX_CYLINDRICAL(T, NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_VELOCITY_FLUX

SUBROUTINE C_FDS_WALL_BC(T, DT, NM) BIND(C, NAME="fds_wall_bc")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL WALL_BC(T, DT, NM)
END SUBROUTINE C_FDS_WALL_BC

SUBROUTINE C_FDS_PARTICLE_MOMENTUM(DT, NM) BIND(C, NAME="fds_particle_momentum")
    REAL(C_DOUBLE), VALUE :: DT
    INTEGER(C_INT), VALUE :: NM
    IF (PARTICLE_DRAG) CALL PARTICLE_MOMENTUM_TRANSFER(DT, NM)
END SUBROUTINE C_FDS_PARTICLE_MOMENTUM

SUBROUTINE C_FDS_DIVERGENCE_PART_1(T, DT, NM) BIND(C, NAME="fds_divergence_part_1")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL DIVERGENCE_PART_1(T, DT, NM)
END SUBROUTINE C_FDS_DIVERGENCE_PART_1

SUBROUTINE C_FDS_DIVERGENCE_PART_2(DT, NM) BIND(C, NAME="fds_divergence_part_2")
    REAL(C_DOUBLE), VALUE :: DT
    INTEGER(C_INT), VALUE :: NM
    CALL DIVERGENCE_PART_2(DT, NM)
END SUBROUTINE C_FDS_DIVERGENCE_PART_2

SUBROUTINE C_FDS_INIT_CHANGE_TIME_STEP(DT) BIND(C, NAME="fds_init_change_time_step")
    REAL(C_DOUBLE), VALUE :: DT
    CHANGE_TIME_STEP_INDEX = 0
    DT_NEW = DT
END SUBROUTINE C_FDS_INIT_CHANGE_TIME_STEP

SUBROUTINE C_FDS_SET_FIRST_PASS(FLAG) BIND(C, NAME="fds_set_first_pass")
    INTEGER(C_INT), VALUE :: FLAG
    FIRST_PASS = (FLAG /= 0)
END SUBROUTINE C_FDS_SET_FIRST_PASS

SUBROUTINE C_FDS_CHECK_CHANGE_TIME_STEP(NEED_RETRY, DT_OUT) BIND(C, NAME="fds_check_change_time_step")
    INTEGER(C_INT), INTENT(OUT) :: NEED_RETRY
    REAL(C_DOUBLE), INTENT(OUT) :: DT_OUT
    ! In original main.f90 (lines 753-758):
    ! If ANY mesh has CHANGE_TIME_STEP_INDEX==-1, DT = MINVAL(DT_NEW) and retry
    ! Otherwise exit (time step increase handled at next MAIN_LOOP iteration)
    IF (ANY(CHANGE_TIME_STEP_INDEX==-1)) THEN
        DT_OUT = MINVAL(DT_NEW)
        NEED_RETRY = 1
    ELSE
        DT_OUT = 0._EB  ! unused
        NEED_RETRY = 0
    ENDIF
END SUBROUTINE C_FDS_CHECK_CHANGE_TIME_STEP

SUBROUTINE C_FDS_CC_RESTORE_UVW(NM) BIND(C, NAME="fds_cc_restore_uvw_unlinked")
    INTEGER(C_INT), VALUE :: NM
    IF (CC_IBM) CALL CC_RESTORE_UVW_UNLINKED(NM, ASSIGN_UNLINKED_VEL=.TRUE.)
END SUBROUTINE C_FDS_CC_RESTORE_UVW

SUBROUTINE C_FDS_VELOCITY_PREDICTOR(T_PLUS_DT, DT, NM) BIND(C, NAME="fds_velocity_predictor")
    REAL(C_DOUBLE), VALUE :: T_PLUS_DT, DT
    INTEGER(C_INT), VALUE :: NM
    CALL VELOCITY_PREDICTOR(T_PLUS_DT, DT, DT_NEW, NM)
END SUBROUTINE C_FDS_VELOCITY_PREDICTOR

SUBROUTINE C_FDS_STOP_CHECK_ZERO() BIND(C, NAME="fds_stop_check_zero")
    CALL STOP_CHECK_DRIVER(0, 0._EB, 0._EB)
END SUBROUTINE C_FDS_STOP_CHECK_ZERO

SUBROUTINE C_FDS_VELOCITY_CORRECTOR(T, DT, NM) BIND(C, NAME="fds_velocity_corrector")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL VELOCITY_CORRECTOR(T, DT, NM)
END SUBROUTINE C_FDS_VELOCITY_CORRECTOR

SUBROUTINE C_FDS_MATCH_VELOCITY(NM) BIND(C, NAME="fds_match_velocity")
    INTEGER(C_INT), VALUE :: NM
    CALL MATCH_VELOCITY(NM)
END SUBROUTINE C_FDS_MATCH_VELOCITY

SUBROUTINE C_FDS_MATCH_VELOCITY_KERNEL(NM, IS_PREDICTOR) &
    BIND(C, NAME="fds_match_velocity_kernel")
    USE VELO_KERNELS, ONLY: MATCH_VELOCITY_KERNEL
    USE CC_VELOCITY, ONLY: CC_MATCH_VELOCITY
    INTEGER(C_INT), VALUE :: NM, IS_PREDICTOR
    IF (SOLID_PHASE_ONLY) RETURN
    IF (CC_IBM) THEN
       CALL CC_MATCH_VELOCITY(NM, (IS_PREDICTOR/=0), .TRUE.)
    ELSE
       CALL MATCH_VELOCITY_KERNEL(MESHES(NM), NM, &
                                   PREDICTOR_FLAG=(IS_PREDICTOR/=0))
    ENDIF
END SUBROUTINE C_FDS_MATCH_VELOCITY_KERNEL

SUBROUTINE C_FDS_VELOCITY_BC(T, NM, ESTIMATED) BIND(C, NAME="fds_velocity_bc")
    REAL(C_DOUBLE), VALUE :: T
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    CALL VELOCITY_BC(T, NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_VELOCITY_BC

SUBROUTINE C_FDS_VELOCITY_BC_PREPROCESSING(NM, T, APPLY_TO_ESTIMATED) &
    BIND(C, NAME="fds_velocity_bc_preprocessing")
    INTEGER(C_INT), VALUE :: NM, APPLY_TO_ESTIMATED
    REAL(C_DOUBLE), VALUE :: T
    IF (SOLID_PHASE_ONLY) RETURN
    CALL VELOCITY_BC_PREPROCESSING(MESHES(NM), NM, T, &
                                    APPLY_TO_ESTIMATED_VARIABLES=(APPLY_TO_ESTIMATED/=0))
END SUBROUTINE C_FDS_VELOCITY_BC_PREPROCESSING

RECURSIVE SUBROUTINE C_FDS_VELOCITY_BC_PROCESS_EDGES_KERNEL(NM, T, APPLY_TO_ESTIMATED) &
    BIND(C, NAME="fds_velocity_bc_process_edges_kernel")
    USE VELO_KERNELS, ONLY: VELOCITY_BC_PROCESS_EDGES_KERNEL
    INTEGER(C_INT), VALUE :: NM, APPLY_TO_ESTIMATED
    REAL(C_DOUBLE), VALUE :: T
    IF (SOLID_PHASE_ONLY) RETURN
    CALL VELOCITY_BC_PROCESS_EDGES_KERNEL(MESHES(NM), NM, T, &
                                           APPLY_TO_ESTIMATED_VARIABLES=(APPLY_TO_ESTIMATED/=0))
END SUBROUTINE C_FDS_VELOCITY_BC_PROCESS_EDGES_KERNEL

SUBROUTINE C_FDS_SYNTHETIC_TURBULENCE_IF_ENABLED(DT, T, NM) &
    BIND(C, NAME="fds_synthetic_turbulence_if_enabled")
    REAL(C_DOUBLE), VALUE :: DT, T
    INTEGER(C_INT), VALUE :: NM
    IF (SYNTHETIC_EDDY_METHOD) CALL SYNTHETIC_TURBULENCE(DT, T, NM)
END SUBROUTINE C_FDS_SYNTHETIC_TURBULENCE_IF_ENABLED

!==============================================================================
! Corrector phase subroutines
!==============================================================================

SUBROUTINE C_FDS_COMBUSTION_BC(NM) BIND(C, NAME="fds_combustion_bc")
    INTEGER(C_INT), VALUE :: NM
    IF (N_REACTIONS>0 .OR. INIT_HRRPUV) CALL COMBUSTION_BC(NM)
END SUBROUTINE C_FDS_COMBUSTION_BC

SUBROUTINE C_FDS_COMBUSTION_LOAD_BALANCED(T, DT) BIND(C, NAME="fds_combustion")
    REAL(C_DOUBLE), VALUE :: T, DT
    IF (N_REACTIONS > 0 .OR. INIT_HRRPUV) CALL COMBUSTION_LOAD_BALANCED(T, DT)
END SUBROUTINE C_FDS_COMBUSTION_LOAD_BALANCED

SUBROUTINE C_FDS_CONDENSATION(DT, NM) BIND(C, NAME="fds_condensation")
    REAL(C_DOUBLE), VALUE :: DT
    INTEGER(C_INT), VALUE :: NM
    IF (ANY(SPECIES_MIXTURE%CONDENSATION_SMIX_INDEX>0)) CALL CONDENSATION_EVAPORATION(DT, NM)
END SUBROUTINE C_FDS_CONDENSATION

SUBROUTINE C_FDS_PARTICLE_MASS_ENERGY(T, DT, NM) BIND(C, NAME="fds_particle_mass_energy")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL PARTICLE_MASS_ENERGY_TRANSFER(T, DT, NM)
END SUBROUTINE C_FDS_PARTICLE_MASS_ENERGY
